css/style.css
/* ... */
/*----- resposnive-menu -----*/
@media(max-width:768px) {
	.header-top {
		padding-top: 2em;
	}

	span.menu:before {
		content: url(../images/nav.png) no-repeat 0px 0px;
		cursor: pointer;
	}

	.top-menu {

		float: none;
		width: 100%;
		text-align: right;
	}

	.top-menu ul {
		display: none;
	}

	.top-menu ul li {
		font-size: 14px;
		display: block;

	}

	.top-menu span.menu {
		display: block;
	}

	.top-menu ul li {
		display: block;
		float: none;
		margin: 0em;
		border-right: none;
	}

	.top-menu ul li {

		padding: 15px 0;
	}

	.top-menu ul {
		margin: 15px 0;
		z-index: 999;
		position: absolute;
		width: 96%;
		background: #2e3e4e;
		text-align: center;
	}

	.top-menu ul li a {
		display: block;
	}

	.wmuSliderPagination {
		right: 46%;
	}

	.contact button {
		width: 20%;
		margin: 83px 0 0 0;
		left: 2%;
		font-size: 14px;
		padding: auto;
	}
}

@media(max-width:736px) {
	.resp-tab-item {
		padding: 0px 7px;
	}
}

@media(max-width:640px) {
	.header-top {
		padding-top: 2.5em;
	}

	.top-menu ul li a {
		font-size: 14px;
	}

	.top-menu ul {
		width: 95%;
	}

	.banner_center {
		top: 36%;
	}

	header {
		min-height: 350px;
	}

	.banner_center h1 {
		font-size: 1.2em;
	}

	.banner_center h2 {
		font-size: 1.2em;
		padding: 5px 0;
	}

	.wmuSliderPagination {
		right: 44%;
	}

	.services-section {
		padding: 1.5em 0;
	}

	.services-header h3 {
		font-size: 1.5em;
	}

	.services-header p {
		font-size: 0.9em;
	}

	.services-grid img {
		width: 20%;
	}

	.services-grid {
		padding: 16px 0;
		width: 100%;
	}

	.services-grid p {
		font-size: 0.9em;
		width: 55%;
		margin: 0 auto;
		text-align: justify;
	}

	.works-section {
		padding: 1.5em 0;
	}

	.works-header h3 {
		font-size: 1.5em;
	}

	.works-header p {
		font-size: 0.9em;
		/* padding: 10px; */
	}

	.grid_box a:hover .zoom-icon {
		top: -30px;
	}

	.about-text p {
		height: 46px;
		overflow: visible;
	}

	.paragraph-2 {
		display: none;
	}

	.about-header {
		display: inline-block;
	}

	.about-header h3 {
		font-size: 1.5em;
	}

	.about-imag img {
		border: 2px solid #386641;
		border-radius: 50%;
		width: 100px;
		height: 100px;
		object-fit: cover;
		object-position: center 25%;
		align-items: center;
	}

	.poll-desc h4 {
		font-size: 15px;
	}

	.percentage p {
		font-size: 15px;
	}

	.footer-section {
		padding: 20px 0px;
	}

	/* .contact-header {
		margin: auto;
	} */

	.contact-header h3 {
		font-size: 1.5em;
	}

	.contact-header p {
		font-size: 0.9em;
	}

	.social-icon i {
		width: 50%;
		height: 50%;
	}

	.contactgrid {
		float: none;

	}

	.contactgrid1 textarea {
		width: 100%;
	}

	.contactgrid input[type="text"] {
		padding: 7px 0;
	}

	.contactgrid2 input[type="submit"] {
		font-size: 13px;
	}

	.contact {
		padding-bottom: 1.5em;
	}

	.footer-bottom p {
		font-size: 14px;
	}

	.footer-bottom p a {
		font-size: 14px;
	}

	.footer-bottom {
		padding-top: 20px;
	}

	.resp-tab-item {
		font-size: 1em;
	}

	div#portfoliolist {
		padding: 8px 8px 0 8px;
	}

	.img-top {
		margin: 3px 0 12px 0;
	}

	.grid_box a:hover .zoom-icon {
		top: 10px;
	}
}

@media(max-width:480px) {
	.header {
		min-height: 275px;
	}

	.header-top {
		padding-top: 1.5em;
	}

	.logo h1 {
		font-size: 1.5em;
		color: #BC4749;
	}

	.top-menu ul {
		width: 93%;
		margin: 19px 0;
	}

	.top-menu ul li {
		padding: 10px 0;
	}

	.top-menu ul li a {
		font-size: 14px;
	}

	.wmuSliderPagination {

		bottom: 40px;
	}

	.banner-wrap {
		padding-top: 15em;
	}

	.banner_center {
		top: 35%;
		left: 24%;
	}

	.banner_center h1 {
		font-size: 0.9em;
	}

	.banner_center h2 {
		font-size: 0.9em;
		padding: 3px 0;
	}

	.wmuSliderNext {
		top: 80px;
	}

	.wmuSliderPrev {
		top: 80px;
	}

	.wmuSliderPagination {
		right: 43%;
	}

	.wmuSliderPagination a {
		width: 12px;
		height: 12px;
	}

	.services-header h3 {
		font-size: 1.4em;
	}

	.services-header p {
		height: 66px;
		overflow: hidden;
	}

	.services-grid h4 {
		font-size: 1em;
		padding: 10px 0;
	}

	.services-grid p {
		width: 100%;
		text-align: justify;
	}

	.works-header h3 {
		font-size: 1.4em;
	}

	.works-header p {
		overflow: visible;
	}

	.works-header p {
		margin: auto 20px;
		padding: 10px;
		text-align: justify;
	}

	.resp-tab-item {
		margin: 0 0.6em;
		padding: 0px 0px;
	}

	.resp-tabs-list {
		text-align: center;
	}

	.b-animate {
		top: 30%;
	}

	.about-header {
		display: flex;
		flex-direction: column;
		align-items: center;
		text-align: center;
		margin-bottom: 50%;
	}

	.about-header h3 {
		font-size: 01.4em;
	}

	.about-imag img {
		border: 2px solid #386641;
		border-radius: 50%;
		width: 120px;
		height: 120px;
		object-fit: cover;
		object-position: center 25%;
		margin: 2rem 0;
	}

	.about-text {
		width: 85%;
		text-align: justify;
	}

	.poll-desc h4 {
		font-size: 14px;
	}

	.percentage p {
		font-size: 14px;
	}

	.contact-header h3 {
		font-size: 1.4em;
	}

	.contact-header p {
		height: 50%;
		margin: auto;
	}

	.contact-header p {
		padding: 10px 0;
	}

	.contactgrid input[type="text"] {
		padding: 5px 0;
	}

	.contact {
		padding-bottom: 1em;
	}

	.contact button {
		width: 50%;
		font-size: 14px;
		left: 15px;
		top: -55px;
	}

	.footer-bottom {
		padding-top: 15px;
	}

	.img-top {
		margin: 0px 0 8px 0;
		width: 33.333%;
	}

	.grid_box a:hover .zoom-icon {
		top: 7px;
	}

	div#portfoliolist {
		background: none;
	}
}

@media(max-width:414px) {
	.resp-tab-item {
		margin: 8px 9px 0px;
	}
}

@media(max-width:375px) {
	.resp-tabs-list {
		margin: 13px 0;

	}
}
/* ... */

